--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="{{ url_for('logout') }}" data-target="#login_modal">Logout</a>
                     </li>
                     {% else %}
-                    <li class="nav-item  tooltipp">
+                    <li class="nav-item  tooltipp ">
                         <a class="nav-link" href="" data-toggle="modal" data-target="#login_modal">Login</a>
                         <span class="tooltiptext">Login to add and edit recipes</span>
                     </li>
@@ -73,10 +73,13 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <br> 
-                <div class="div">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
+                  <div class="row modal-sign">
+                    <div>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="modal-body">
                     <div class="flashes text-center">
