--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <link href="{{url_for('static',filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/clean-blog.css')}}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
+    <link rel="shortcut icon" href="#" />
     <title>Appetite Food </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
 </head>
